# Q

./: 1.h  1.read_csv.c  Makefile.am  Makefile.in  Makefile~  Notes.txt  Output.h  TODO.txt  _x  add_fld.c  add_fld.h  add_tbl.h  app_fld.h  approx_frequent.h  approx_unique.h  approx_uq.h  asc2bin.c  aux_dld.c  aux_hdfs.h  aux_join.h  aux_meta.c  auxil.c  auxil.h  bak_compound.h  behead.c  bin2asc.h  bindmp.c  bindmp.h  binld.h  bug1.txt  bwise_not_and_scalar_I8.h  bwise_not_or_scalar_I8.h  concat_I2_I2_to_I4.h  config.h.in  configure  configure.ac  conv.h  conv_B_to_I1.c  conv_I1_to_B.h  copy_fld.c  (+96 more)
AUTOGEN/: genfiles.sh  repl.csv  repl5.csv  repl7.csv  tmpl_cmp_eq_mult_scalar.c  tmpl_core_srt_join_X_X_X.c  tmpl_crc32.c  tmpl_pack_incl.c  tmpl_s_to_f_random.c  tmpl_set_val.c  tmpl_uniq_cnt_alldef.c  tmpl_xfer.c
DEPRECATED/: pr_dict.h  tmpl_set_val.c  udf_deg2.h  udf_eq_B.h  vec_normal_cdf_inverse.h  vec_pval_from_zval.h
REEMATEST/: in.csv  in2.csv  in3.csv  meta.csv  meta2.csv  meta3.csv  run.sh  run2.sh  run3.sh
include/: ApproxQuantile.h  Collapse.h  New.h  a_and_not_b_I1.h  add_aux_fld.h  app_tbl.h  approx_quantile.h  asc2bin.h  aux_dld.h  aux_meta.h  behead.h  break_nn_fld.h  chk_ascii.h  compound.h  concat_I4_I4_to_I8.h  constants.h  conv_B_to_I1.h  copy_fld.h  copy_fld_ranges.h  count.h  count_ht.h  count_vals.h  count_vals_ldb.h  count_vals_maps.h  crossprod.h  del_fld.h  del_tbl.h  determine_b_k.h  determine_rho_loc.h  dir_is_a_in_b.h  dld.h  drop_aux_fld.h  dup_fld.h  esc_for_latex.h  f1f2_to_s.h  f1f2opf3.h  f1opf2_idx_with_reset.h  f1opf2_shift.h  f1opf2f3.h  f_to_s.h  (+54 more)
src/: ApproxQuantile.c  Makefile  Makefile.am  Makefile.in  a_and_not_b_I1.c  add_aux_fld.c  add_to_couchdb.c  aux_hdfs.c  bin2asc.c  concat_I2_I2_to_I4.c  conv.c  crc32.c  dbauxil.c  del_fld.c  dir_is_a_in_b.c  q.c  (+25 more)
(+60 files in other folders)
